--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "ngx-bootstrap": "^3.0.1",
+    "ng-select": "^1.0.0-rc.3",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
