--- a/package.json
+++ b/package.json
@@ -27,8 +27,9 @@
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
-    "ngx-bootstrap": "^3.0.1",
     "ng-select": "^1.0.0-rc.3",
+    "ngx-bootstrap": "^3.0.1",
+    "ngx-quill": "^3.3.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
