--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^3.2.1",
     "ng-select": "^1.0.0-rc.3",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-chips": "^1.9.4",
     "ngx-quill": "^3.3.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
