--- a/package.json
+++ b/package.json
@@ -53,9 +53,5 @@
     "tslint": "~5.9.1",
     "typescript": "~2.5.3"
   },
-  "devDependencies": {},
-  "engines": {
-    "node": "8.9.4",
-    "npm": "5.6.0"
-  }
+  "devDependencies": {}
 }
