--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ngx-chips": "^1.9.4",
     "ngx-quill": "^3.3.0",
     "rxjs": "^5.5.6",
+    "compression": "^1.7.3",
     "zone.js": "^0.8.19",
     "@angular/cli": "1.6.8",
     "@angular/compiler-cli": "^5.2.1",
